Fixed slider's height on tablets

--- a/src/app/pages/projects/projects-slider/projects-slider.component.scss
+++ b/src/app/pages/projects/projects-slider/projects-slider.component.scss
@@ -5,7 +5,7 @@
 
   &__slide {
     min-width: 100%;
-    height: 190px;
+    height: 250px;
     margin-inline: 5px;
     background-color: var(--bg-secondary);
     background-repeat: no-repeat;
@@ -13,6 +13,7 @@
     background-size: cover;
     background-blend-mode: luminosity;
     cursor: pointer;
+    transition: transform 0.1s ease;
 
     &:hover {
       background-color: var(--color-accent);
@@ -43,7 +44,7 @@
 @media screen and (min-width: 800px) {
   .slider {
     flex-direction: column;
-    max-height: calc(3 * (190px + 2 * 10px));
+    max-height: calc(3 * (195px + 2 * 10px));
     overflow: hidden;
 
     &__slide {
